# bevy-react

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: continuous-git.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BEVY_VERSION.md  BOA_COMPAT.md  BRIDGE.md  BUILD.md  DEMO_SMOKE.md  DEVTOOLS.md  ECS_ESCAPE.md  EXAMPLES.md  GETTING_STARTED.md  PROJECT_PLAN.md  PROTO.md  STYLE_PROPS.md  TESTING.md  TROUBLESHOOTING.md
examples/common/: auto_screenshot.rs
examples/demo/: Cargo.toml  README.md
examples/demo/src/: main.rs
examples/demo/ui/: package-lock.json  package.json  vite.config.ts
examples/demo/ui/src/: App.tsx
examples/forms/: Cargo.toml  README.md
examples/forms/src/: main.rs
examples/forms/ui/: package.json
examples/forms/ui/src/: App.tsx
examples/gallery/: Cargo.toml  README.md
examples/gallery/src/: main.rs
examples/gallery/ui/: package.json
examples/gallery/ui/src/: App.tsx  main.tsx
examples/hud/: Cargo.toml  README.md
examples/hud/src/: bridge_types.rs  main.rs
examples/hud/ui/: package.json  vite.config.ts
examples/hud/ui/src/: App.tsx  hudTypes.ts
examples/menu/: Cargo.toml  README.md
examples/menu/src/: main.rs
examples/menu/ui/: package.json
examples/menu/ui/src/: App.tsx  main.tsx
plugin/: Cargo.toml
plugin/src/: lib.rs
plugin/src/js/: builder.rs  client.rs  console_log.rs  engine.rs  engine_wasm.rs  error_report.rs  esm.rs  fetch_api.rs  host_hooks.rs  mod.rs  protocol.rs  sourcemap_enrich.rs  websocket.rs
plugin/src/js/websocket/: extension.rs  manager.rs  mod.rs
plugin/src/js_bevy/: error_overlay.rs  mod.rs  plugin.rs
plugin/src/react/: asset_source.rs  bridge.rs  bridge_codegen.rs  client.rs  components_registry.rs  devtools.rs  embedded.rs  event_queue.rs  hmr.rs  message_tests.rs  mod.rs  native_functions.rs  plugin.rs  shim.rs  style.rs  vite.rs  widgets.rs
plugin/src/react/proto/: codec.rs  mod.rs
plugin/src/react/systems/: input.rs  interaction_style.rs  mod.rs  render.rs  teardown.rs  types.rs
plugin/tests/: binary_ops_soak.rs  boa_smoke.rs  message_handling.rs
scripts/: capture-example-screenshots.sh  demo-smoke.sh  generate-bridge-types.sh
