[package]
name = "bevy_react"
version = "0.1.0"
edition = "2024"
description = "A React renderer for Bevy UI"
license = "MIT"
repository = "https://github.com/jhead/bevy-react"
keywords = ["bevy", "react", "ui", "gamedev"]
categories = ["gui", "game-development"]
readme = "../README.md"

[dependencies]
bevy = "0.17.3"
boa_engine = "0.21.0"
boa_gc = "0.21.0"
boa_runtime = "0.21.0"
futures-util = "0.3.31"
log = "0.4.28"
once_cell = "1.21.3"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28.0"
url = "2.5.7"
