[package]
name = "bevy_react"
version = "0.1.0"
edition = "2024"
description = "A React renderer for Bevy UI"
license = "MIT"
repository = "https://github.com/jhead/bevy-react"
keywords = ["bevy", "react", "ui", "gamedev"]
categories = ["gui", "game-development"]
readme = "../README.md"

[dependencies]
bevy = { version = "0.17.3", features = ["experimental_bevy_ui_widgets"] }
boa_engine = "0.21.0"
boa_gc = "0.21.0"
boa_runtime = "0.21.0"
futures-util = "0.3.31"
log = "0.4.28"
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.145"
sourcemap = "9.3.2"
url = "2.5.7"
base64 = "0.22"

# Used by the app-level `fetch` Fetcher (JsResponse builder).
http = { version = "1", optional = true }

# Optional entity-mapping inspector (`egui` feature).
bevy_egui = { version = "0.38", optional = true }

# Optional TypeScript codegen from Rust types (`bridge-codegen` feature).
ts-rs = { version = "12.0", optional = true, default-features = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", optional = true }
# blocking: Boa's native job executor uses futures_lite::block_on, which cannot
# drive Tokio futures — use reqwest's blocking client for globalThis.fetch.
reqwest = { version = "0.12.24", optional = true, features = ["blocking"] }

# WASM dependencies - reqwest uses browser fetch API automatically
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48", default-features = false, features = ["sync", "macros"] }
reqwest = { version = "0.12.24", optional = true, default-features = false }
js-sys = "0.3"

[features]
default = ["websocket", "fetch"]
websocket = ["tokio-tungstenite"]
fetch = ["reqwest", "http"]
# JSON WebSocket bridge on :8098 (component tree + node_id↔Entity map).
devtools = ["websocket"]
# egui panel listing ReactContext.nodes (does not force egui on default users).
egui = ["dep:bevy_egui"]
# Convenience: debug bridge + inspector together.
devtools-full = ["devtools", "egui"]
# Emit TypeScript from Rust bridge types + command metadata (ts-rs).
bridge-codegen = ["dep:ts-rs"]
# Dual-path binary mutation batches (`__react_commit_ops` + BRRP codec).
# Enum RPC remains default; see docs/PROTO.md.
binary_ops = []
